[Add]: Add database.

--- a/blog/.env
+++ b/blog/.env
@@ -4,10 +4,10 @@ SERVER_ENV=development
 
 # Database
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433
 DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=myapp
+DB_PASSWORD=955361034
+DB_NAME=go_micro
 DB_SSL_MODE=disable
 
 # Redis
