--- a/auth/.env
+++ b/auth/.env
@@ -1,12 +1,12 @@
 # Server
-SERVER_PORT=8081
+SERVER_PORT=8080
 SERVER_ENV=development
 
 # Database
 DB_HOST=localhost
-DB_PORT=5433
+DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=955361034
+DB_PASSWORD=123456
 DB_NAME=go_micro
 DB_SSL_MODE=disable
 
