--- a/auth/.env
+++ b/auth/.env
@@ -3,9 +3,9 @@ SERVER_PORT=8080
 SERVER_ENV=development
 
 # Database
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
-DB_USER=postgres
+DB_USER=ali
 DB_PASSWORD=123456
 DB_NAME=go_micro
 DB_SSL_MODE=disable
