--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
 
-  broker-service:
+  auth-service:
     build:
       context: ./../auth
       dockerfile: ./../auth/auth.dockerfile
@@ -12,3 +12,53 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+    networks:
+      - laravel
+
+  user-service:
+    build:
+      context: ./../user
+      dockerfile: ./../user/user.dockerfile
+    restart: always
+    ports:
+      - "8081:8080"
+    deploy:
+      mode: replicated
+      replicas: 1
+    networks:
+      - laravel
+
+  db_postgres:
+    image: postgres
+    container_name: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: ali
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_DB: go_micro
+    ports:
+      - "54320:5432"
+    volumes:
+      - local_pgdata:/var/lib/postgresql/data
+    networks:
+      - laravel
+
+  pgadmin4:
+    container_name: pgadmin4
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: alimoharrami251@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: 123456
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    networks:
+      - laravel
+
+networks:
+  laravel:
+volumes:
+  local_pgdata:
+  pgadmin_data:
