--- a/blog/.env
+++ b/blog/.env
@@ -3,12 +3,13 @@ SERVER_PORT=8080
 SERVER_ENV=development
 
 # Database
-DB_HOST=localhost
-DB_PORT=5433
-DB_USER=postgres
-DB_PASSWORD=955361034
+DB_HOST=postgres
+DB_PORT=5432
+DB_USER=ali
+DB_PASSWORD=123456
 DB_NAME=go_micro
 DB_SSL_MODE=disable
+
 
 # Redis
 REDIS_ADDR=localhost:6379
