--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -70,6 +70,18 @@ services:
     networks:
       - laravel
 
+  rabbitmq:
+    image: 'rabbitmq:3.9-alpine'
+    ports:
+      - "5672:5672"
+    deploy:
+      mode: replicated
+      replicas: 1
+    volumes:
+      - ./db-data/rabbitmq/:/var/lib/rabbitmq/
+    networks:
+      - laravel
+
 networks:
   laravel:
 volumes:
