--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -2,6 +2,32 @@ version: '3'
 
 services:
 
+  frontend-service:
+    build:
+      context: ./../frontend
+      dockerfile: ./../frontend/Dockerfile
+    restart: always
+    ports:
+      - "3000:80"
+    networks:
+      - laravel
+
+  gateway-service:
+    build:
+      context: ./../gateway
+      dockerfile: ./../gateway/gateway.dockerfile
+    restart: always
+    ports:
+      - "8000:8080"
+    environment:
+      - USER_SERVICE_URL=http://user-service:8080
+      - PORT=8080
+    deploy:
+      mode: replicated
+      replicas: 1
+    networks:
+      - laravel
+
   auth-service:
     build:
       context: ./../auth
