--- a/user/.env
+++ b/user/.env
@@ -3,7 +3,7 @@ SERVER_PORT=8080
 SERVER_ENV=development
 
 # Database
-DB_HOST=postgres
+DB_HOST=db_postgres
 DB_PORT=5432
 DB_USER=ali
 DB_PASSWORD=123456
@@ -11,9 +11,15 @@ DB_NAME=go_micro
 DB_SSL_MODE=disable
 
 # Redis
-REDIS_ADDR=localhost:6379
+REDIS_ADDR=redis:6379
 REDIS_PASSWORD=
 REDIS_DB=0
+
+# RabbitMQ
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
 
 # SMTP
 SMTP_HOST=smtp.gmail.com
