--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - "8000:8080"
     environment:
       - USER_SERVICE_URL=http://user-service:8080
+      - AUTH_SERVICE_URL=http://auth-service:8080
       - PORT=8080
     deploy:
       mode: replicated
