--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_DOMAIN=https://glorious-space-parakeet-j4x6v5wrgrjfprww-8000.app.github.dev
+VITE_API_DOMAIN=https://super-duper-cod-g5g9jqwxwgwc9gvp-8000.app.github.dev/api
