--- a/frontend/env-config.json
+++ b/frontend/env-config.json
@@ -1,3 +1,3 @@
 {
-  "API_DOMAIN": "https://cuddly-yodel-6rj6qg7vwjxc59vq-8000.app.github.dev"
+  "API_DOMAIN": "https://super-duper-cod-g5g9jqwxwgwc9gvp-8000.app.github.dev/api"
 }
