--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_DOMAIN=https://super-duper-cod-g5g9jqwxwgwc9gvp-8000.app.github.dev/api
+VITE_API_DOMAIN=https://improved-waffle-g5g9jqwx5gjcvx79-8000.app.github.dev/
