--- a/frontend/env-config.json
+++ b/frontend/env-config.json
@@ -1,3 +1,3 @@
 {
-  "API_DOMAIN": "https://super-duper-cod-g5g9jqwxwgwc9gvp-8000.app.github.dev/api"
+  "API_DOMAIN": "https://improved-waffle-g5g9jqwx5gjcvx79-8000.app.github.dev/"
 }
