feat: Implement blog post management service with gRPC user integration and RabbitMQ notifications.

--- a/blog/.env
+++ b/blog/.env
@@ -26,3 +26,9 @@ SMTP_FROM=noreply@yourapp.com
 # JWT
 JWT_SECRET=your-secret-key
 JWT_EXPIRY=24h
+
+# RabbitMQ
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
