--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -114,9 +114,11 @@ services:
 
       
   rabbitmq:
-    image: 'rabbitmq:3.9-alpine'
+    image: rabbitmq:3-management
+    container_name: rabbitmq
     ports:
       - "5672:5672"
+      - "15672:15672"   # Management UI
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
